--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,9 +2,20 @@
   position: absolute;
   top: 61px;
   left: 130px;
-  background-image: url(../../../images/header-logos.svg);
+  background-image: url(../../../images/header-logo.svg);
   width: 371px;
   height: 60px;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+@media screen and (max-width: 1023px) {
+  .header__logo {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    background-image: url(../../../images/header-logo-mobile.svg);
+    width: 120px;
+    height: 46px;
+  }
 }
