--- a/blocks/header/__info/header__info.css
+++ b/blocks/header/__info/header__info.css
@@ -3,3 +3,9 @@
   max-width: 639px;
   min-height: 274px;
 }
+
+@media screen and (max-width: 1023px) {
+  .header__info {
+    padding: 227px 30px 0;
+  }
+}
