--- a/blocks/header/__route/header__route.css
+++ b/blocks/header/__route/header__route.css
@@ -8,3 +8,9 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+@media screen and (max-width: 1023px) {
+  .header__route {
+    display: none;
+  }
+}
