--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -7,3 +7,9 @@
   line-height: 150%;
   color: #fff;
 }
+
+@media screen and (max-width: 1023px) {
+  .header__subtitle {
+    font-size: 16px;
+  }
+}
