--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -6,3 +6,10 @@
   line-height: 75px;
   color: #fff;
 }
+
+@media screen and (max-width: 1023px) {
+  .header__title {
+    font-size: 36px;
+    line-height: 45px;
+  }
+}
