--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -7,3 +7,10 @@
   line-height: 30px;
   color: #000;
 }
+
+@media screen and (max-width: 1023px) {
+  .card__title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+}
