--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,12 +1,12 @@
 .cards {
-  padding: 0 20px 0;
   margin: 0 auto;
-  max-width: 1215px;
+  max-width: 1180px;
   max-height: 1070px;
   align-items: center;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  gap: 35px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1200px) {
@@ -16,9 +16,18 @@
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 860px) and (max-width: 1023px) {
   .cards {
-    justify-content: center;
-    display: grid;
+    max-width: 810px;
+    max-height: 1070px;
+  }
+}
+
+@media screen and (max-width: 859px) {
+  .cards {
+    flex-wrap: nowrap;
+    padding: 0 12px 0;
+    min-height: 1690px;
+    gap: 10px;
   }
 }
