--- a/blocks/footer/__gazpromneft-logo/footer__gazpromneft-logo.css
+++ b/blocks/footer/__gazpromneft-logo/footer__gazpromneft-logo.css
@@ -5,3 +5,11 @@
   background-repeat: no-repeat;
   background-position: bottom;
 }
+
+@media screen and (max-width: 859px) {
+  .footer__gazpromneft-logo {
+    width: 66px;
+    height: 24px;
+    background-size: contain;
+  }
+}
