--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,3 +13,9 @@
   min-height: 180px;
   padding-top: 17px;
 }
+
+@media screen and (max-width: 859px) {
+  .footer {
+    padding-top: 45px;
+  }
+}
