--- a/blocks/header/__dates/header__dates.css
+++ b/blocks/header/__dates/header__dates.css
@@ -1,8 +1,17 @@
-.header__date {
+.header__dates {
   background-image: url(../../../images/header-date.svg);
   background-repeat: no-repeat;
   width: 60px;
   height: 23px;
   padding-bottom: 9px;
   border-bottom: 1px solid #fff;
+  background-size: contain;
+}
+
+@media screen and (max-width: 600px) {
+  .header__dates {
+    padding-bottom: 8px;
+    width: 51px;
+    height: 19px;
+  }
 }
