--- a/blocks/header/__event-logo/header__event-logo.css
+++ b/blocks/header/__event-logo/header__event-logo.css
@@ -1,8 +1,17 @@
 .header__event-logo {
-  padding-left: 18px;
+  margin-left: 18px;
   background-image: url(../../../images/header-event-logo.svg);
   background-repeat: no-repeat;
   background-position: right;
+  background-size: contain;
   width: 74px;
   height: 57px;
+}
+
+@media screen and (max-width: 600px) {
+  .header__event-logo {
+    margin-left: 12px;
+    width: 63px;
+    height: 48px;
+  }
 }
