--- a/blocks/header/__info/header__info.css
+++ b/blocks/header/__info/header__info.css
@@ -2,10 +2,11 @@
   padding: 224px 0 0 130px;
   max-width: 639px;
   min-height: 274px;
+  z-index: 1;
 }
 
 @media screen and (max-width: 1023px) {
   .header__info {
-    padding: 227px 30px 0;
+    padding: 224px 30px 0;
   }
 }
