--- a/blocks/header/__month/header__month.css
+++ b/blocks/header/__month/header__month.css
@@ -3,6 +3,15 @@
   background-image: url(../../../images/header-month.svg);
   background-repeat: no-repeat;
   background-position: bottom;
+  background-size: contain;
   width: 60px;
   height: 13px;
+}
+
+@media screen and (max-width: 600px) {
+  .header__month {
+    padding-top: 9px;
+    width: 51px;
+    height: 11px;
+  }
 }
