--- a/blocks/header/__route/header__route.css
+++ b/blocks/header/__route/header__route.css
@@ -7,6 +7,7 @@
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
+  z-index: 1;
 }
 
 @media screen and (max-width: 1023px) {
