--- a/blocks/header/__button/header__button.css
+++ b/blocks/header/__button/header__button.css
@@ -13,6 +13,10 @@
   border-radius: 5px;
 }
 
+.header__button:hover {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1023px) {
   .header__button {
     margin-top: 29px;
