--- a/blocks/footer/__sponsors-logo/footer__sponsors-logo.css
+++ b/blocks/footer/__sponsors-logo/footer__sponsors-logo.css
@@ -2,8 +2,10 @@
   margin: 0 auto;
   padding-top: 33px;
   width: 454px;
+  height: 50px;
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
 }
 
 @media screen and (max-width: 859px) {
