--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,10 +2,9 @@
   position: absolute;
   top: 61px;
   left: 130px;
-  width: 371px;
   height: 60px;
   background-repeat: no-repeat;
-  background-position: center;
+  object-fit: contain;
 }
 
 @media screen and (max-width: 1023px) {
@@ -13,7 +12,7 @@
     position: absolute;
     top: 30px;
     left: 30px;
-    content: url(../../../images/header-logo-mobile.svg);
+    content: url(../../../images/logo.png);
     width: 120px;
     height: 46px;
   }
